fix button text align

--- a/src/components/ui/button/ui-button.module.css
+++ b/src/components/ui/button/ui-button.module.css
@@ -1,5 +1,6 @@
 .button {
 	display: flex;
+	justify-content: center;
 	border-radius: 10px;
 	font-size: 16px;
 	line-height: 16px;
